<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="title_movies">Movies</string>
    <string name="title_tvshows">Tv Shows</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Movie Title</string>
    <string name="rating">Movie Rating</string>
    <string name="popularity">Movie Popularity</string>
    <string name="description">Movie Description</string>
    <string name="release">Movie Release</string>
    <string name="message">Please Wait...</string>
    <string-array name="data_name_movie">
        <item>Avengers : Infinity War</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>A Star Is Born </item>
        <item>Aquaman </item>
        <item>Bird Box </item>
        <item>Bohemian Rhapsody </item>
        <item>Bumblebee </item>
        <item>Once Upon a Deadpool</item>
        <item>Venom </item>
        <item>Creed II  </item>
    </string-array>
    <string-array name="data_director_movie">
        <item>Joe Russo</item>
        <item>Rodney Rothman</item>
        <item>Bradley Cooper</item>
        <item>James Wan</item>
        <item>Susanne Bierc</item>
        <item>Bryan Singer</item>
        <item>Travis Knight</item>
        <item>David Leitch</item>
        <item>Ruben Fleischer</item>
        <item>Steven Caple Jr.</item>
    </string-array>
    <string-array name="data_genre_movie">
        <item>Action</item>
        <item>Animation</item>
        <item>Romance</item>
        <item>Action</item>
        <item>Thriller</item>
        <item>Drama</item>
        <item>Action</item>
        <item>Comedy</item>
        <item>Action</item>
        <item>Drama</item>
    </string-array>
    <string-array name="data_year_movie">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
    </string-array>
    <string-array name="data_description_movie">
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment the fate of Earth and existence itself has never been more uncertain</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson Kingpin Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>Seasoned musician Jackson Maine discovers and falls in love with struggling artist Ally. She has just about given up on her dream to make it big as a singer until Jack coaxes her into the spotlight. But even as Ally career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world Standing in his way is Arthur Curry, Orms half-human, half Atlantean brother and true heir to the throne</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet  finding a way to keep the band together amid the success and excess</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpools PG-13 rendition of Deadpool 2 as a Princess Bride esque story thats full of magic, wonder and zero Fs.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his familys past, Adonis Creed is up against the challenge of his life</item>
    </string-array>
    <string-array name="data_name_tvshow">
        <item>Arrow </item>
        <item>Doom Patrol </item>
        <item>Dragon Ball </item>
        <item>Fairy Tail </item>
        <item>Family Guy </item>
        <item>The Flash </item>
        <item>Game of Thrones </item>
        <item>Gotham</item>
        <item>Grey Anatomy</item>
        <item>Hanna</item>
    </string-array>
    <string-array name="data_genre_tvshow">
        <item>Crime</item>
        <item>Sci-fi and fantasy</item>
        <item>Animation</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Sci-fi and fantasy</item>
        <item>Sci-fi and fantasy</item>
        <item>Crime</item>
        <item>Drama</item>
        <item>Action</item>
    </string-array>
    <string-array name="data_director_tvshow">
        <item>Greg Berlanti</item>
        <item>Jeremy Carver</item>
        <item>Akira Toriyama</item>
        <item>Shinji Ishihira</item>
        <item>Seth MacFarlane</item>
        <item>Geoff Johns</item>
        <item>David Benioff</item>
        <item>Bruno Heller</item>
        <item>Shonda Rhimes</item>
        <item>David Farr</item>
    </string-array>
    <string-array name="data_year_tvshow">
        <item>2012</item>
        <item>2019</item>
        <item>1986</item>
        <item>2009</item>
        <item>1999</item>
        <item>2014</item>
        <item>2011</item>
        <item>2014</item>
        <item>2005</item>
        <item>2019</item>
    </string-array>
    <string-array name="data_description_tvshow">
        <item>Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man,determined to clean up the city as a hooded vigilante armed with a bow.</item>
        <item>The Doom Patrol’s members each suffered horrible accidents that gave them superhuman abilities but also left them scarred and disfigured. Traumatized and downtrodden, the team found purpose through The Chief, who brought them together to investigate the weirdest phenomena in existence and to protect Earth from what they find.</item>
        <item>Long ago in the mountains, a fighting master known as Gohan discovered a strange boy whom he named Goku. Gohan raised him and trained Goku in martial arts until he died. The young and very strong boy was on his own, but easily managed. Then one day, Goku met a teenage girl named Bulma, whose search for the dragon balls brought her to Gokus home. Together, they set off to find all seven dragon balls in an adventure.</item>
        <item>Lucy is a 17 year old girl, who wants to be a full fledged mage. One day when visiting Harujion Town, she meets Natsu, a young man who gets sick easily by any type of transportation. But Natsu is not just any ordinary kid, he is a member of one of the world is most infamous mage guilds: Fairy Tail.</item>
        <item>Sick, twisted, politically incorrect and Freakin Sweet animated series featuring the adventures of the dysfunctional Griffin family. Bumbling Peter and long-suffering Lois have three kids. Stewie (a brilliant but sadistic baby bent on killing his mother and taking over the world), Meg (the oldest, and is the most unpopular girl in town) and Chris (the middle kid, he is not very bright but has a passion for movies). The final member of the family is Brian - a talking dog and much more than a pet, he keeps Stewie in check whilst sipping Martinis and sorting through his own life issues.</item>
        <item>After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel. Though initially excited by his newfound powers, Barry is shocked to discover he is not the only "meta human" who was created in the wake of the accelerator explosion and not everyone is using their new powers for good. Barry partners with S.T.A.R. Labs and dedicates his life to protect the innocent. For now, only a few close friends and associates know that Barry is literally the fastest man alive, but it will not be long before the world learns what Barry Allen has become.</item>
        <item>Seven noble families fight for control of the mythical land of Westeros. Friction between the houses leads to full-scale war. All while a very ancient evil awakens in the farthest north. Amidst the war, a neglected military order of misfits, the Night Watch, is all that stands between the realms of men and icy horrors beyond.</item>
        <item>Before there was Batman, there was GOTHAM. Everyone knows the name Commissioner Gordon. He is one of the crime world greatest foes, a man whose reputation is synonymous with law and order. But what is known of Gordon story and his rise from rookie detective to Police Commissioner? What did it take to navigate the multiple layers of corruption that secretly ruled Gotham City, the spawning ground of the world most iconic villains? And what circumstances created them  the larger than life personas who would become Catwoman, The Penguin, The Riddler, Two Face and The Joker?</item>
        <item>Follows the personal and professional lives of a group of doctors at Seattle Grey Sloan Memorial Hospital.</item>
        <item>This thriller and coming of age drama follows the journey of an extraordinary young girl as she evades the relentless pursuit of an off book CIA agent and tries to unearth the truth behind who she is. Based on the 2011 Joe Wright film.</item>

    </string-array>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="detail_tv">Detail Tv Show</string>
</resources>